--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Website</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <h1>Welcome to My Website</h1>
-  <p>This is a simple website created using HTML and CSS.</p>
-</body>
-</html>
+<h1>Hello World!</h1>
+<p>ここは真似亜神社です。</p>
+
