--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-<h1>真似亜神社</h1>
-<p>ここは真似亜神社です。</p>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>真似亜神社</title>
+    <!-- CSSファイルを読み込む -->
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>こんにちは！</h1>
+    <p>このサイトはchatGPTと弱い夢野ふのの頭でつくられています</p>
+</body>
+</html>
