--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>こんにちは！</h1>
+    <h1>真似亜神社</h1>
     <p>このサイトはchatGPTと弱い夢野ふのの頭でつくられています</p>
 </body>
 </html>
