--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>真似亜神社</h1>
-    <p>このサイトはchatGPTと弱い夢野ふのの頭でつくられています</p>
+    <p>このサイトはchatGPTと弱い夢野ふのの頭で作られています</p>
 </body>
 </html>
