--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>真似亜神社</title>
-    <!-- CSSファイルを読み込む -->
+    <title>スタイル変更</title>
+    <!-- CSSを読み込む -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>真似亜神社</h1>
-    <p>このサイトはchatGPTと弱い夢野ふのの頭で作られています</p>
 </body>
 </html>
