--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>スタイル変更</title>
+    <title>真似亜神社</title>
     <!-- CSSを読み込む -->
     <link rel="stylesheet" href="styles.css">
 </head>
